correction photo, ajout redirection localisation, scroll

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,14 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
-
-    <ImageView
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+       <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+             <ImageView
         android:id="@+id/ivImage"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -65,5 +71,8 @@
         android:id="@+id/buttonSauvegarde"
         android:layout_below="@+id/buttonCamera"
         android:layout_centerHorizontal="true" />
+        </LinearLayout>
+    </ScrollView>
+
 
 </RelativeLayout>
